libs/bng/test/negative/N0100_molecule_type_bond.bngl
# FAIL
# OUTPUT: error: syntax error, unexpected '!'


begin molecule types
   A(a!+) # already the parser detects this error
   B(z!1)
end molecule types
